# ghcjs-servant-client

./: .gitignore  .gitmodules  ChangeLog.md  LICENSE  README.md  ghcjs-servant-client.cabal  servant-client.cabal  stack.yaml
src/Servant/: Client.hs
src/Servant/Common/: Req.hs
test-server/: stack.yaml  test-server.cabal
test-server/app/: Main.hs
test-server/src/: Api.hs  Server.hs
tests/: Api.hs  Spec.hs
