name:                ghcjs-servant-client
version:             1.1.1
synopsis: automatical derivation of querying functions for servant webservices
description:
  This library lets you derive automatically Haskell functions that
  let you query each endpoint of a <http://hackage.haskell.org/package/servant servant> webservice.
  .
  See <http://haskell-servant.github.io/tutorial/client.html the client section of the tutorial>.
  .
  <https://github.com/haskell-servant/servant/blob/master/servant-client/CHANGELOG.md CHANGELOG>
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari, Sönke Hahn, Julian K. Arni
maintainer:          alpmestan@gmail.com
copyright:           2014 Zalora South East Asia Pte Ltd
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC >= 7.8
homepage:            http://haskell-servant.github.io/
Bug-reports:         http://github.com/haskell-servant/servant/issues
source-repository head
  type: git
  location: http://github.com/haskell-servant/servant.git

library
  exposed-modules:
    Servant.Client
    Servant.Common.BaseUrl
    Servant.Common.Req
  build-depends:
      base >=4.7 && <5
    , aeson
    , attoparsec
    , bytestring
    , either
    , exceptions
    , http-media
    , http-types
    , network-uri >= 2.6
    , safe
    , servant == 0.4.*
    , string-conversions
    , text
    , transformers
    , ghcjs-base
    , ghcjs-prim          
    , split
    , case-insensitive
    , primitive
    , ghcjs-ffiqq
              
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
