name:                ghcjs-servant-client
version:             1.1.1
synopsis:            undefined
description:         undefined
license:             BSD3
license-file:        LICENSE
author:              Kevin Cotrone, Michael Sewell, James M.C. Haver II
maintainer:          alpmestan@gmail.com
copyright:           2016 Plow Technologies
category:            Web
build-type:          Simple
cabal-version:       >=1.10
Bug-reports:         http://github.com/plow-technologies/ghcjs-servant-client/issues

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Servant.Client
                       Servant.Common.BaseUrl
                       Servant.Common.Req
  build-depends:       base >=4.7 && <5
                     , aeson
                     , attoparsec
                     , bytestring
                     , case-insensitive
                     , either
                     , exceptions
                     , ghcjs-base
                     , ghcjs-ffiqq
                     , ghcjs-prim
                     , http-media
                     , http-types
                     , network-uri >= 2.6
                     , primitive
                     , safe
                     , servant == 0.4.*
                     , split
                     , string-conversions
                     , text
                     , transformers


test-suite tests
  hs-source-dirs:      tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Spec.hs
  other-modules:       Api
  build-depends:       base >= 4 && < 5
                     , aeson
--                  , bytestring
                     , either
                     , ghcjs-base
                     , ghcjs-ffiqq
                     , ghcjs-hspec-json
                     , ghcjs-jsval-combinators                     
                     , ghcjs-servant-client
                     , hspec
                     , servant
                     , text
                     , transformers
--                  , QuickCheck
--                  , text
--                  , time

source-repository head
  type: git
  location: http://github.com/plow-technologies/ghcjs-servant-client.git
